--- a/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
@@ -147,97 +147,97 @@ SOV_EUR_FIN_desc:0 "러시아 내전 동안 반동 핀란드 왕국에게 카렐
 
 ### Domestic Events ###
 sovd.1.t:0 "프룬제가 승리를 선언하다"
-sovd.1.d:0 "Standing high on a pile of destroyed reactionary monuments in the recently reclaimed red square Mikhail Frunze announces his victory to his supporters in the first Soviet elections. With Soviet power, Russia will no longer be the punching bag of the world'"
+sovd.1.d:0 "되찾은 붉은 광장의 부서진 반동적 기념물들 위에서 미하일 프룬제는 그의 승리를 제 1차 소비에트 선거에서의 지지자들에게 알렸습니다. 소비에트의 힘과 함께 러시아는 더 이상 세계의 동네북이 아닙니다."
 sovd.1.a:0 "소비에트 러시아는 우릴 승리로 이끌 것이다!"
 sovd.1.b:0 "Let him keep his hat, though."
 sovd.2.t:0 "부하린이 승리를 선언하다"
-sovd.2.d:0 "After working tirelessly to bring the Soviet state back to life and winning the first Soviet elections Bukharin addresses the Soviet people in a live radio broadcast from Petrograd, announcing his victory. He also declared that the city shall be renamed Leningrad in honour of the eternal revolutionary and the ideological visionary of the new Soviet Union."
+sovd.2.d:0 "소비에트 국가에 활기를 되찾아주고, 제1차 소비에트 선거에서 승리하기 위해 쉴새없이 노력한 뒤, 부하린은 페트로그라드의 라디오 방송을 통해 소비에트 인민들에게 자신의 승리를 알렸습니다. 그는 영원한 혁명가이자 새로운 소련의 사상적 선지자를 기리기 위해 도시의 이름을 레닌그라드로 바꿔야함을 선언했습니다."
 sovd.2.a:0 "소비에트 연방은 결코 부서지지 않는다!"
 sovd.3.t:0 "투하체프스키가 승리를 선언하다"
 sovd.3.d:0 "In a major public event held in Moscow, attended by socialist revolutionaries and diplomats from all over the world, the newly elected Mikhail Tukhachevsky has promised support for fellow workers attempting to free themselves throughout the world. 'The new Soviet Republic is the homeland of all workers' - he was quoted saying."
 sovd.3.a:0 "타이가부터 영국해까지, 소비에트 공화국이 가장 강력하다!"
 sovd.4.t:0 "생산 수단을 점령하다!"
-sovd.4.d:0 "With government support, workers throughout the country rise up against their employers and demand collective ownership over the means of production."
+sovd.4.d:0 "정부의 지원과 함께, 전국을 아우르는 노동자들은 그들의 고용주들에게 맞서기 위해 일어섰고, 생산수단에 걸쳐 공동소유를 요구했습니다."
 sovd.4.a:0 "좋은 소식이군!"
 sovd.5.t:0 "수도"
 sovd.5.d:0 "러시아의 역사적인 수도 둘 모두 우리의 새로운 사회주의 정부의 집이 될 수 있습니다. 어디로 가겠습니까?"
 sovd.5.a:0 "레닌그라드로!"
 sovd.5.b:0 "모스크바로!"
 sovd.6.t:0 "정교회의 지위"
-sovd.6.d:0 "Now that Soviet power has been established in Russia we must decide our stance towards the powerful Orthodox Church. The Church itself is still very important to the masses yet part of our doctrine insists that we have to destroy or significantly weaken religious organisations. What shall we do?"
+sovd.6.d:0 "이제 소비에트의 권력이 러시아에 자리잡음에 따라 우리는 저 강력한 정교회에 대한 우리의 입장을 결정해야합니다. 교회 자체는 대중들에게 여전히 중요하지만, 우리의 교리 중 일부는 우리가 종교 단체들을 파괴하거나 약화시켜아 한다고 주장하고 있습니다. 우리는 어떻게 해야 할 까요?"
 sovd.6.a:0 "러시아에서 교회를 몰아내고 국가 무신론을 도입하자!"
 sovd.6.b:0 "교회는 홀로 내버려둬라, 세속적인 일은 국가가 할 것이다."
 sovd.6.c:0 "정교회는 우리 국교다!"
-sovd.7.t:0 "The clergy criticises the government"
-sovd.7.d:0 "A number of priests have voiced their disagreement with our policy of a secular and modern state. Even though this fact is of little importance we must keep in mind that religion plays a huge role in the average Russian's life."
+sovd.7.t:0 "성직자들이 정부를 비난하다"
+sovd.7.d:0 "한 무리의 성직자들이 우리나라의 세속적이고 근대적인 정책에 반대하는 목소리를 내고 있습니다. 그럼에도 불구하고 이 사실은 그리 중요하지 않지만, 우리는 러시아인들의 일상에 종교가 큰 역할을 하고 있음을 간과해선 안 될 것입니다."
 sovd.7.a:0 "계속 진행해야 한다!"
-sovd.8.t:0 "The patriarch criticises the government"
-sovd.8.d:0 "Seeing increased displeasure among the common folk, the patriarch has decided to voice his concern about the increasing secularisation of our state. Even if we try to turn a deaf ear to his demands we cannot easily ignore such an influential and powerful character as the patriarch."
+sovd.8.t:0 "총대주교가 정부를 비난하다"
+sovd.8.d:0 "민중 사이의 불만이 커지는 것을 본 총대주교가 우리나라의 세속화가 진행되고 있는 것에 대한 우려의 목소리를 표했습니다. 그의 요구에 귀기울이지 않으려 노력해도, 우리는 총대주교로서 가진 강력한 인격과 영향력을 쉽게 무시할 수 없을 것입니다."
 sovd.8.a:0 "모든 것을 그대로 놔 두자!"
 sovd.8.b:0 "러시아의 교회들을 쓸어버리고 국가 무신론을 주입하자!"
-sovd.8.c:0 "He is right, declare Orthodoxy our state religion."
-sovd.11.t:0 "The party hardliners criticise the clergy"
-sovd.11.d:0 "The hard-line members of the party think that it is foolish of us to make this 'reactionary filth' part of the new Soviet state. Some of them want to secularise our state while the most radical members demand the complete abolition of church services."
+sovd.8.c:0 "그가 옳다, 정교회를 우리나라의 국교로 지정하자."
+sovd.11.t:0 "당 강경파들이 성직자들을 비난하다"
+sovd.11.d:0 "강경파 당원들이 새로운 소비에트 정권에 ‘반동적 오점’을 남기는 것을 어리석다고 생각하고 있습니다. 그들 중 일부는 급진파들이 교회에 대한 전면적 폐지를 요구하는 동안 우리 나라를 세속화하길 원하고 있습니다."
 sovd.11.a:0 "그들이 소리치게 두어라!"
-sovd.11.b:0 "We should secularise our state."
-sovd.11.c:0 "They are right, destroy this 'reactionary establishment'!"
+sovd.11.b:0 "우리나라를 세속화해야한다."
+sovd.11.c:0 "그들이 옳다, 이 ‘반동적 유물’을 파괴하라!"
 sovd.12.t:0 "New Atheist Museum opened"
-sovd.12.d:0 "A new museum dedicated to state atheism has been opened yesterday in one of our towns. Its presence will definitely help to re-educate the backward parts of Russian society."
+sovd.12.d:0 "국가 무신론에 헌신하는 새 박물관이 어제 우리 도시들 중 하나에 개장되었습니다. 그 존재는 분명히 러시아 사회의 낙후된 부분을 재교육 시키는데 도움이 될 것입니다."
 sovd.12.a:0 "완벽해!"
-sovd.13.t:0 "Peasant unrest"
-sovd.13.d:0 "Our attempts to rid Russia of its reactionary remnants, namely the Orthodox Church, were met with ferocious resistance from the peasantry. These dissenters have been crushed by our armed forces."
-sovd.13.a:0 "Oh well."
+sovd.13.t:0 "농민 폭동"
+sovd.13.d:0 "정교회라는 이름의 반동적 잔재를 러시아에서 없애버리려는 우리의 시도는 농민들로부터 격렬한 저항에 부딪혔습니다. 이 반대자들은 우리 군대에 의해 진압되었습니다."
+sovd.13.a:0 "어쩔 수 없지."
 sovd.14.t:0 "니콜라이 부하린의 죽음"
-sovd.14.d:0 "The leader of the VKP(b), also known as the All-Union Communist Party or the Bolsheviks, Nicolai Bukharin has passed away in his house in Moscow. While not as popular as some other party leaders he was one of the symbols of the new Soviet state. The Soviet people will remember Bukharin and his great deeds forever. His duties will be carried out by the SOVNARKOM until the general elections next year. SOVNARKOM has decided to build a Mausoleum in his honour which will be situated in the Red Square, and consist of a big tower, crowned with a sculpture of Bukharin, to glorify their friend and comrade."
+sovd.14.d:0 "전연방 공산당, 혹은 볼셰비키로 알려진 VKP의 지도자 니콜라이 부하린이 모스크바의 자택에서 세상을 떠났습니다. 비록 다른 당 지도자들처럼 인기있진 않았으나, 그는 새로운 소비에트 연방의 상징이였습니다. 소련 인민들은 부하린과 그의 위대한 행동들을 영원히 기억할 것입니다. 그의 업무는 내년의 선거까지 인민위원평의회가 담당할 것이며, 인민위원평의회는 그를 기리고자 그들의 친구와 동지들을 찬양하기 위해 부하린의 조각상으로 관식을 단 거대한 탑으로 구성된 영묘를 붉은 광장에 건설하기로 결정했습니다."
 sovd.14.a:0 "잘가게, 니콜라이. 넌 이제 쉬어도 돼."
 sovd.15.t:0 "미하일 프룬제가 중태"
-sovd.15.d:0 "Mikhail Frunze was hospitalised in the central Moscow hospital yesterday after suffering from severe nausea. His diagnosis was found to be stomach cancer and the doctors are saying that Frunze will live no more than a year. Out of respect to the now bedridden leader, elections won't be held until after his death."
-sovd.15.a:0 "The whole country shares his pain."
-sovd.16.t:0 "Marshal Tukhachevsky was killed!"
-sovd.16.d:0 "Marshal Tukhachevsky was on his way to the Kremlin yesterday when an unknown terrorist threw a bomb at him, killing the marshal and himself in the process. General Meretskov has become the Provisional leader of the country for the time being but who will direct Soviet policy? The second Soviet general elections, which will take place in 1946, will decide the general direction of our country."
+sovd.15.d:0 "미하일 프룬제가 산발적인 매스꺼움을 앓은 뒤, 어제 중앙 모스크바 병원으로 입원했습니다. 그의 증상은 위암으로 진단되었고, 의사들은 프룬제가 1년을 넘기지 못할 것이라고 말했습니다. 병상에 누워있는 지도자에 경의를 표하며, 그의 죽음 이후까지 선거는 열리지 않을 것입니다."
+sovd.15.a:0 "전국이 그의 고통을 공유한다."
+sovd.16.t:0 "투하쳅스키 원수가 살해당하다!"
+sovd.16.d:0 "투하쳅스키 원수가 어제 크렘린으로 가던 도중, 정체불명의 테러리스트가 그에게 폭탄을 던져 원수와 그 자신을 죽였습니다. 메레츠코프 장군이 국가의 임시 지도자가 되었으나, 누가 소비에트의 정책을 이끌게 될까요? 1946년에 열릴 제 2차 소비에트 선거가 우리나라의 방향을 결정할 것입니다. "
 sovd.16.a:0 "안돼!"
-sovd.17.t:0 "National-Syndicalist faction"
-sovd.17.d:0 "Members of the Leningrad section of the VKP(b) have met with supporters from all over Soviet Russia. They want to create a National-Syndicalist state as was described by Benito Mussolini and Oswald Mosley. The main leaders of this movement are Alexander Kuznetsov and Petr Popkov. Their political programs are deemed dangerous by the other factions of the VKP(b)."
+sovd.17.t:0 "국가조합주의 세력"
+sovd.17.d:0 "VKP의 레닌그라드 지부 당원들이 소비에트 러시아 전역에서 온 지지자들과 만남을 가졌습니다. 그들은 베니토 무솔리니와 오스왈드 모슬리가 말한 국가조합주의 정권을 만들기 원했습니다. 이 움직임의 주동자는 알렉산더 쿠즈네초프와 페테르 포프코프입니다. 그들의 정치적 행보는 VKP의 다른 세력들에게 위협으로 간주 될 것입니다."
 sovd.17.a:0 "흥미롭군."
-sovd.18.t:0 "군 팩션"
-sovd.18.d:0 "Some generals of the Soviet army, among them Georgiy Zhukov and Ivan Konev, are ready to participate in the elections. Their aim is an overhaul of the military industrial sector and the continuation of the armed struggle against all enemies of Soviet Russia."
+sovd.18.t:0 "군부 세력"
+sovd.18.d:0 "군부의 일부 장성들 사이에서 게오르그 주코프와 이반 코네프가 선거에 출마할 준비를 하고 있습니다. 그들의 목표는 군수 산업 분야에 대한 정비와 소비에트 러시아의 모든 적들에 대한 무력 투쟁의 연장입니다."
 sovd.18.a:0 "Is that so?"
-sovd.19.t:0 "Beria finds friends."
+sovd.19.t:0 "베리아가 친구들을 찾다."
 sovd.19.d:0 "The NKVD is trying to find information about internal plots aimed against the Soviet Union. The chief of the NKVD, Vladimir Dekanozov, is a good friend of Lavrentij Beria. Nobody knows about what their plans are but there are some rumours that they want to dissolve the party and partially restore capitalism."
-sovd.19.a:0 "He can't be a leader, he doesn't have a moustache!"
-sovd.20.t:0 "Yezhov finds friends."
+sovd.19.a:0 "그는 지도자가 될 수 없어, 그는 콧수염이 없다고!"
+sovd.20.t:0 "예조프가 친구들을 찾다."
 sovd.20.d:0 "The NKVD is trying to find information about internal plots aimed against the Soviet Union. The chief of the NKVD, Vladimir Dekanozov, is a good friend of Nikolai Yezhov. Nobody knows about what their plans are but there are some rumours that they want to dissolve the party and partially restore capitalism."
 sovd.20.a:0 "We expect a rise in demand for tinfoil."
-sovd.21.t:0 "The New-Leninist faction"
+sovd.21.t:0 "신 레닌주의 세력"
 sovd.21.d:0 "Since the birth of the Soviet Union the VKP(b) hasn't changed its political program. Nikita Khrushev wants to enact minor economic changes and transfer parts of federal power from the centre to the individual Soviet republics. Will he succeed?"
 sovd.21.a:0 "Who knows?"
-sovd.22.t:0 "The New-Leninist faction"
+sovd.22.t:0 "신 레닌주의 세력"
 sovd.22.d:0 "Since the birth of the Soviet Union the VKP(b) hasn't changed its political program. Leonid Brezhnev wants to enact minor economic changes and transfer parts of federal power from the centre to the individual Soviet republics. Will he succeed?"
 sovd.22.a:0 "Who knows?"
 sovd.23.t:0 "The faction of True Syndicalism"
 sovd.23.d:0 "Since the birth of the Soviet Republic the VKP(b) hasn't changed its political program. Sergey Kirov and Nikolai Shvernik want to put an end to the world revolution in order to build syndicalism in the Soviet Republic and to bring peace to the tired nation. Will they succeed?"
 sovd.23.a:0 "Who knows?"
-sovd.24.t:0 "World Revolution faction"
+sovd.24.t:0 "세계혁명주의 세력"
 sovd.24.d:0 "After the death of Tukhachevsky various Red generals, namely Konstantin Rokossovsky and Kirill Meretskov, decided to continue in his work. The world revolution is still not finished and they want to lead the Soviet Republic in a struggle to bring syndicalism to the entire world."
-sovd.24.a:0 "But the Soviet nation is tired!"
-sovd.25.t:0 "The second Soviet elections"
+sovd.24.a:0 "하지만 소비에트는 지쳤다!"
+sovd.25.t:0 "제 2차 소비에트 선거"
 sovd.25.d:0 "Today the second Soviet general elections has finally begun. Different factions want to assume supreme power over the Soviet state in order to reform the existing political and economic systems in ways they deem appropriate. What will happen at the various congresses? Which faction will gain majority?"
-sovd.25.a:0 "The National-Syndicalist faction!"
-sovd.25.b:0 "The Military faction!"
-sovd.25.c:0 "The NKVD arrests them all!"
-sovd.25.e:0 "The new-Leninist faction!"
-sovd.25.g:0 "The world revolution faction!"
+sovd.25.a:0 "국가 조합주의 세력!"
+sovd.25.b:0 "군부 세력!"
+sovd.25.c:0 "NKVD가 모두를 체포하다!"
+sovd.25.e:0 "신 레닌주의 세력!"
+sovd.25.g:0 "세계 혁명주의 세력!"
 sovd.25.f:0 "The true syndicalist faction!"
-sovd.26.t:0 "Remembering the death of V. I. Lenin"
-sovd.26.d:0 "Today we remember the death of the greatest socialist revolutionary the world has ever seen, V. I. Lenin. His contribution to the cause will never be forgotten. Memorial services are being held all over the soviet state as well as in major cities in other socialist state where millions of workers pay respect to the father of all socialist states."
-sovd.26.a:0 "Lenin lived! Lenin lives! Lenin will live!"
-sovd.26.b:0 "We too mourn his death."
-sovd.26.c:0 "Red scum, you'll soon join your idol in hell."
-sovd.27.t:0 "Cruiser overhaul finished"
-sovd.27.d:0 "The general overhaul of our obsolete cruisers was successfully finished. They are ready to re-enter the service of the Soviet navy."
-sovd.27.a:0 "Excellent!"
-sovd.28.t:0 "Battleships overhaul finished"
-sovd.28.d:0 "The general overhaul of our obsolete battleships was successfully finished. They are ready to re-enter the service of the Soviet navy."
+sovd.26.t:0 "V.I 레닌의 죽음을 기억하라"
+sovd.26.d:0 "오늘 우리는 세계에서 가장 위대한 사회주의 혁명가 V.I 레닌의 죽음을 기억합니다, 그리고 대의에 대한 그의 공헌은 잊혀지지 않을 것입니다. 추모제는 소비에트 국가 전역에서와 수백만명의 노동자들이 모든 사회주의 국가들의 아버지를 존경하는 다른 사회주의 국가들의 주요 도시들에서 개최되고 있습니다."
+sovd.26.a:0 "레닌은 살아있었다! 레닌은 살아있다! 레닌은 살아있을것이다!"
+sovd.26.b:0 "우리도 그의 죽음에 애도를 표합니다."
+sovd.26.c:0 "빨갱이 놈들, 곧 너희들의 우상과 지옥에서 만날 것이다."
+sovd.27.t:0 "순양함 정비 완료"
+sovd.27.d:0 "구식 순양함들에 대한 전면적 정비가 성공적으로 끝났습니다. 이 배들은 소비에트 해군에 재취역할 준비가 됬습니다."
+sovd.27.a:0 "훌륭해!"
+sovd.28.t:0 "전함 정비 완료"
+sovd.28.d:0 "구식 전함들의 전면적 정비가 성공적으로 끝났습니다. 이 함선들은 소비에트 해군에 재취역할 준비가 되었습니다."
 
 ### Foreign Events ###
 sovf.1.t:0 "볼셰비키즘!"
