번역완료/오타수정

--- a/Kaiserreich Korean Translation/localisation/KR_Allgemeine_Ostasiatische_Gesellschaft_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Allgemeine_Ostasiatische_Gesellschaft_l_english.yml
@@ -73,7 +73,7 @@ allgost.10.t:0 "공화국 수립"
 allgost.10.d:0 "일반 동아시아 회사는 중국 민주당주도하에 자유 공화국이 수립될 것이다."
 allgost.10.a:0 "공화국을 수립하라!"
 allgost.11.t:0 "일반 동아시아 회사가 독일로부터 독립을 선언하다!"
-allgost.11.d:0 "일반 동아시아 회사 이사회가 현지인들을 지도부로 끌어들이는 맞불을 놓음으로써 회사의 준국가화에 대한 안정을 가져왔으며 일반 동아시아 회사는 독일 제국으로부터 완전한 독일을 선언했습니다. 이제 우리는 무엇을 할 것인지 결정해야합니다!"
+allgost.11.d:0 "일반 동아시아 회사 이사회가 현지인들을 지도부로 끌어들이는 맞불을 놓음으로써 회사의 준국가화에 대한 안정을 가져왔으며 일반 동아시아 회사는 독일 제국으로부터 완전한 독립을 선언했습니다. 이제 우리는 무엇을 할 것인지 결정해야합니다!"
 allgost.11.a:0 "그냥 납둬라!"
 allgost.11.b:0 "놈 들을 파괴할 것이다!"
 allgost.12.t:0 "공화국이여 영원하라"
