--- a/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
@@ -687,7 +687,7 @@ generic_special_forces:0 "특수 부대"
 generic_special_forces_desc:0 "Special Forces are more than the Elite Units of old. With modern equipment, even a conscript can hold his own on the battlefield. However, some situations are so hostile that they need specially trained men. Mountain ranges, amphibious landings, airborne assaults."
 
 generic_aviation_effort:0 "공군"
-generic_aviation_effort_tt:0 "Not enough building slots for §YAir Base§!"
+generic_aviation_effort_tt:0 "§Y공군 기지§를 지을 공간이 부족함!"
 generic_aviation_effort_desc:0 "The field of aviation was born almost in time for the Weltkrieg. Even two decades after this war, it is still new, and all nations strive to be ready for the next time their planes may be called to war. We must, too. We must found a solid Airforce to organise them."
 generic_fighter_focus:0 "제공권 우세"
 generic_fighter_focus_desc:0 "The dogfights of the Weltkrieg were merely the start of air-to-air warfare. As planes become faster, more armoured and more heavily armed, we need to put all our efforts into making sure we control the air. Then, striking the ground is a formality."
@@ -703,7 +703,7 @@ generic_NAV_effort:0 "해군항공대"
 generic_NAV_effort_desc:0 "Perhaps one of the major breakthroughs in naval warfare, naval bombers are able to lay waste on enemy fleets with torpedoes and other dedicated naval payloads like mines. Supporting our fleets, they can challenge capital ships and wreck havoc in the naval screens."
 
 generic_naval_effort:0 "현대 조선소"
-generic_naval_effort_tt:0 "Not enough building slots for §YNaval Dockyards§!"
+generic_naval_effort_tt:0 "§Y해군 조선소§를 지을 공간이 부족함!"
 generic_naval_effort_desc:0 "If we are to establish a strong navy, we need to produce it first. Shipbuilding methods have evolved, and old drydocks need to be upgraded as much as new dockyards must be built from scratch. The modern ship is no cog, and we must see big to have a sea-worthy fleet."
 generic_flexible_navy:0 "유동적 전술"
 generic_flexible_navy_desc:0 "We will never have the navies of the world powers, able to clean entire seas of opposition, but this does not mean our fleet will hide in port. Using flexible tactics and modern inventions like submarines, we do not need to actually match up with those grand fleets to wreck havoc."
@@ -713,7 +713,7 @@ generic_submarine_effort:0 "잠수함전"
 generic_submarine_effort_desc:0 "Submarine warfare is the most exciting naval development since the invention of the torpedo boat, and challenges even the most classical doctrines of naval warfare. We would do well to not just protect against submarines, but also use them against enemy ships."
 generic_cruiser_effort:0 "전위함"
 generic_cruiser_effort_desc:0 "Cruisers are not just 'cheap Battleships', and such outdated thinking ruins the potential of those ships. We should use them as escorts to our capital ships, as they are very vulnerable to naval bombers and smaller ships like torpedo boats."
-generic_destroyer_effort:0 "대 잠수함전"
+generic_destroyer_effort:0 "대잠전"
 generic_destroyer_effort_desc:0 "By studying the design and strategic use of submarines, we also learn how to counter them. Our Destroyers will need specialised equipment like depth charges and specific designs that are both light and small to ensure they can escort convoys and patrol efficiently."
 generic_capital_ships_effort:0 "주력함"
 generic_capital_ships_effort_desc:0 "Eventually, a fleet is nothing without a centrepiece, and both the old Battleship and modern Carrier fit this role. While vulnerable in a direct confrontation, they can bring massive damage upon enemy fleets if we let them shell and swarm the enemy ships from a safe distance."
@@ -721,10 +721,10 @@ generic_capital_ships_effort_desc:0 "Eventually, a fleet is nothing without a ce
 generic_industrial_effort:0 "산업 수단"
 generic_industrial_effort_desc:0 "To construct a large industrial base, we will need to set up the basics of modern industry, and maybe even make initial choices. Concentrated or dispersed industrial centres, investing in machine tools and construction tools. All of those are important things to focus on."
 generic_construction_effort:0 "산업 보조금"
-generic_construction_effort_tt:0 "Not enough building slots for §YCivilian Factories§!"
+generic_construction_effort_tt:0 "§Y민간공장§을 지을 공간이 부족함!"
 generic_construction_effort_desc:0 "A healthy and strong industry doesn't just appear out of nowhere. While we may have to start more ambitious projects later, we must start by ensuring that those with good management skills can start healthy, successful companies that may later grow into giants."
 generic_production_effort:0 "국가 병기창"
-generic_production_effort_tt:0 "Not enough building slots for §YMilitary Factory§!"
+generic_production_effort_tt:0 "§Y군수공장§을 지을 공간이 부족함!"
 generic_production_effort_desc:0 "Until we are able to produce our own military equipment, we should create modern armouries for our army. Their goal is quite modest, procuring the gear our army needs using state funds, civilian production and simple production, but it is better than not getting any new rifles."
 generic_construction_effort_2:0 "산업 센터"
 generic_construction_effort_2_desc:0 "Entrepreneurship is one thing, but to have an economy worthy of even a regional power, we will need to foster the large industrial regions that made the Industrial Revolution. The seeds of such regions are large investment into promising industrial sites."
@@ -734,8 +734,8 @@ generic_production_effort_3:0 "군수 산업"
 generic_production_effort_3_desc:0 "We have finally reached a point where we have companies able to build the equipment we need, even if their output is still limited. However, our needs are still great, and by giving them absolute support over foreign companies they will slowly scale up to our needs."
 generic_infrastructure_effort:0 "국가 기반시설"
 generic_infrastructure_effort_desc:0 "Our growing industry requires a solid infrastructure to ensure the transit of goods. We need to do away with chaotic, city to city planning and finally draw the roads of our country. Those who exist, those who will be expanded or linked, and those that have yet to be."
-generic_infrastructure_effort_tt:0 "Not enough building slots for §YInfrastructure§!"
-generic_synth_oil_effort_tt:0 "Not enough building slots for §YSynthetic Refinery§!"
+generic_infrastructure_effort_tt:0 "§Y기반시설§을 지을 공간이 부족함!"
+generic_synth_oil_effort_tt:0 "§Y합성 정제소§를 지을 공간이 부족함!"
 generic_infrastructure_effort_2:0 "철도망"
 generic_infrastructure_effort_2_desc:0 "Modern countries need railway networks, able to bring anything from one point of the country to another rapidly and efficiently. This means we will have to expand our railways and create junctions that didn't occur to us even a few years ago."
 generic_construction_effort_3:0 "산업망"
