--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -679,7 +679,7 @@ VICTORY_POINTS_11707:0 "오비에도"
 VICTORY_POINTS_11746:0 "아다나"
 VICTORY_POINTS_11747:0 "앙카라"
 VICTORY_POINTS_11752:0 "장베이"
-VICTORY_POINTS_11771:0 "무크덴"
+VICTORY_POINTS_11771:0 "묵던"
 VICTORY_POINTS_11773:0 "칼리아리"
 VICTORY_POINTS_11800:0 "피츠버그"
 VICTORY_POINTS_11805:0 "리스본"
