--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -2194,9 +2194,9 @@ ETH_social_conservative_DEF:0 "에티오피아"
 ETH_authoritarian_democrat:0 "아비시니아"
 ETH_authoritarian_democrat_ADJ:0 "아비시니아"
 ETH_authoritarian_democrat_DEF:0 "아비시니아"
-ETH_paternal_autocrat:0 "제정 에티오피아"
-ETH_paternal_autocrat_ADJ:0 "에티오피아"
-ETH_paternal_autocrat_DEF:0 "제정 에티오피아"
+ETH_paternal_autocrat:0 "아비시니아"
+ETH_paternal_autocrat_ADJ:0 "아비시니아"
+ETH_paternal_autocrat_DEF:0 "아비시니아"
 ETH_national_populist:0 "아비시니아"
 ETH_national_populist_ADJ:0 "아비시니아"
 ETH_national_populist_DEF:0 "아비시니아"
