--- a/Kaiserreich Korean Translation/localisation/KR_Alash_Autonomy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Alash_Autonomy_l_english.yml
@@ -2,28 +2,28 @@ l_english:
 
 ### Opinion Modifiers ###
 ALO_loyal_RUS:0 "알라쉬 자치국의 충성"  
-ALO_independent_RUS:0 "알라쉬 자치국이 독립을 선언하다" 
-ALO_indepence_RUS:0 "알라쉬 자치국이 독립을 선언하다"
-KAZ_TUR_DKB:0 "튀르크인 정부 수반이 뽑히다"
-KAZ_TUR_RUS:0 "튀르크인 정부 수반이 뽑히다"
-KAZ_TUR_TRK:0 "튀르크인 정부 수반이 뽑히다"
-KAZ_RUS_DKB:0 "러시아인 정부 수반이 뽑히다"
-KAZ_RUS_RUS:0 "러시아인 정부 수반이 뽑히다"
-KAZ_RUS_TRK:0 "러시아인 정부 수반이 뽑히다"
-KAZ_COS_DKB:0 "코사크인 정부 수반이 뽑히다"
-KAZ_COS_RUS:0 "코사크인 정부 수반이 뽑히다"
-KAZ_COS_TRK:0 "코사크인 정부 수반이 뽑히다"
-ALO_DKB_secede:0 "분리독립이 요구되다"
+ALO_independent_RUS:0 "알라쉬 자치국이 독립을 선언함" 
+ALO_indepence_RUS:0 "알라쉬 자치국이 독립을 선언함"
+KAZ_TUR_DKB:0 "튀르크인이 정부 수반으로 뽑힘"
+KAZ_TUR_RUS:0 "튀르크인이 정부 수반으로 뽑힘"
+KAZ_TUR_TRK:0 "튀르크인이 정부 수반으로 뽑힘"
+KAZ_RUS_DKB:0 "러시아인이 정부 수반으로 뽑힘"
+KAZ_RUS_RUS:0 "러시아인이 정부 수반으로 뽑힘"
+KAZ_RUS_TRK:0 "러시아인이 정부 수반으로 뽑힘"
+KAZ_COS_DKB:0 "코사크인이 정부 수반으로 뽑힘"
+KAZ_COS_RUS:0 "코사크인이 정부 수반으로 뽑힘"
+KAZ_COS_TRK:0 "코사크인이 정부 수반으로 뽑힘"
+ALO_DKB_secede:0 "분리독립을 요구함"
 ALO_DKB_pledge:0 "코사크인들은 코사크 사회를 보호하는 것을 맹세한다"
 ALO_DKB_no_concern:0 "코사크인들은 걱정거리가 되지 않는다"
 ALO_let_cossaks:0 "코사크인들이 독립하도록 하자"
 ALO_TRK_liberate:0 "해방된 이슬람 동지들"
 ALO_TRK_defend:0 "오르다의 이슬람교도들을 보호하는것을 맹세하자"
 ALO_TRK_do_nothing:0 "튀르키스탄은 현 상태를 유지한다"
-ALO_RUS_encourage:0 "분리독립이 요구되다"
+ALO_RUS_encourage:0 "분리독립을 요구함"
 ALO_RUS_pledge:0 "러시아인들은 러시아 사회를 보호하는 것을 맹세한다"
-ALO_RUS_war:0 "러시아가 우리에게 전쟁을 선포하다"
-ALO_RUS_nothing:0 "러시아는 현 상태를 유지한다"
+ALO_RUS_war:0 "러시아가 우리에게 전쟁을 선포함"
+ALO_RUS_nothing:0 "러시아가 현 상태를 유지함"
 ALO_do_nothing_RUS:0 "알라쉬 독립"
 ALO_RUS_alliance:0 "러시아와의 동맹"
 ALO_RUS_decline_all:0 "러시아가 우리의 동맹 요청을 거절하다"
