--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -924,7 +924,7 @@ l_english:
  STATE_922:0 "오모"
  STATE_923:0 "티그레"
  STATE_924:0 "베니샹굴구무즈"
- STATE_925:0 "Gallaland"
+ STATE_925:0 "갈라랜드"
  STATE_926:0 "세르메르소크"
  STATE_927:0 "카메룬"
  STATE_928:0 "콩고-바르트슈타트"
