--- a/Kaiserreich Korean Translation/localisation/KR_Princely_Federation_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Princely_Federation_l_english.yml
@@ -29,24 +29,24 @@ PRF_baroda_forces:0 "Baroda's princely forces will join the war!\n"
 PRF_orissa_forces:0 "Rebels forces in Orissa will join the war!\n"
 
 ### Parties ###
-PRF_totalist_party:0 "Maximists"
-PRF_totalist_party_long:0 "Maximists"
-PRF_syndicalist_party:0 "Syndicalists"
-PRF_syndicalist_party_long:0 "Syndicalists"
-PRF_radical_socialist_party:0 "Agrarians"
-PRF_radical_socialist_party_long:0 "Agrarians"
-PRF_social_democrat_party:0 "Westernisers"
-PRF_social_democrat_party_long:0 "Westernisers"
-PRF_social_liberal_party:0 "Westernisers"
-PRF_social_liberal_party_long:0 "Westernisers"
-PRF_market_liberal_party:0 "Westernisers"
-PRF_market_liberal_party_long:0 "Westernisers"
-PRF_social_conservative_party:0 "Council of Princes"
-PRF_social_conservative_party_long:0 "Council of Princes"
-PRF_authoritarian_democrat_party:0 "Council of Princes"
-PRF_authoritarian_democrat_party_long:0 "Council of Princes"
-PRF_paternal_autocrat_party:0 "Council of Princes"
-PRF_paternal_autocrat_party_long:0 "Council of Princes"
+PRF_totalist_party:0 "최대주의자"
+PRF_totalist_party_long:0 "최대주의자"
+PRF_syndicalist_party:0 "생디칼리스트"
+PRF_syndicalist_party_long:0 "생디칼리스트"
+PRF_radical_socialist_party:0 "농민"
+PRF_radical_socialist_party_long:0 "농민"
+PRF_social_democrat_party:0 "웨스턴나이저"
+PRF_social_democrat_party_long:0 "웨스턴나이저"
+PRF_social_liberal_party:0 "웨스턴나이저"
+PRF_social_liberal_party_long:0 "웨스턴나이저"
+PRF_market_liberal_party:0 "웨스턴나이저"
+PRF_market_liberal_party_long:0 "웨스턴나이저"
+PRF_social_conservative_party:0 "왕자 회의"
+PRF_social_conservative_party_long:0 "왕자 회의"
+PRF_authoritarian_democrat_party:0 "왕자 회의"
+PRF_authoritarian_democrat_party_long:0 "왕자 회의"
+PRF_paternal_autocrat_party:0 "왕자 회의"
+PRF_paternal_autocrat_party_long:0 "왕자 회의"
 PRF_national_populist_party:0 "Ittehad-ul Muslimeen"
 PRF_national_populist_party_long:0 "Ittehad-ul Muslimeen"
 
