--- a/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
@@ -154,7 +154,7 @@ sovd.2.t:0 "부하린이 승리를 선언하다"
 sovd.2.d:0 "소비에트 국가에 활기를 되찾아주고, 제1차 소비에트 선거에서 승리하기 위해 쉴새없이 노력한 뒤, 부하린은 페트로그라드의 라디오 방송을 통해 소비에트 인민들에게 자신의 승리를 알렸습니다. 그는 영원한 혁명가이자 새로운 소련의 사상적 선지자를 기리기 위해 도시의 이름을 레닌그라드로 바꿔야함을 선언했습니다."
 sovd.2.a:0 "소비에트 연방은 결코 부서지지 않는다!"
 sovd.3.t:0 "투하체프스키가 승리를 선언하다"
-sovd.3.d:0 "In a major public event held in Moscow, attended by socialist revolutionaries and diplomats from all over the world, the newly elected Mikhail Tukhachevsky has promised support for fellow workers attempting to free themselves throughout the world. 'The new Soviet Republic is the homeland of all workers' - he was quoted saying."
+sovd.3.d:0 "모스크바에서 열린 주요 공개 행사에서, 전 세계에서 온 혁명가들과 외교관들이 참석한 가운데 새로 선출된 미하일 투하쳅스키는 세계 곳곳에서 자신들의 자유를 찾으려는 노동자 동지들을 위한 지원을 약속했습니다. ‘새 소비에트 공화국은 모든 노동자들의 고국입니다.’라고 그가 말한것으로 전해졌습니다."
 sovd.3.a:0 "타이가부터 영국해까지, 소비에트 공화국이 가장 강력하다!"
 sovd.4.t:0 "생산 수단을 점령하다!"
 sovd.4.d:0 "정부의 지원과 함께, 전국을 아우르는 노동자들은 그들의 고용주들에게 맞서기 위해 일어섰고, 생산수단에 걸쳐 공동소유를 요구했습니다."
@@ -203,36 +203,36 @@ sovd.18.t:0 "군부 세력"
 sovd.18.d:0 "군부의 일부 장성들 사이에서 게오르그 주코프와 이반 코네프가 선거에 출마할 준비를 하고 있습니다. 그들의 목표는 군수 산업 분야에 대한 정비와 소비에트 러시아의 모든 적들에 대한 무력 투쟁의 연장입니다."
 sovd.18.a:0 "Is that so?"
 sovd.19.t:0 "베리아가 친구들을 찾다."
-sovd.19.d:0 "The NKVD is trying to find information about internal plots aimed against the Soviet Union. The chief of the NKVD, Vladimir Dekanozov, is a good friend of Lavrentij Beria. Nobody knows about what their plans are but there are some rumours that they want to dissolve the party and partially restore capitalism."
+sovd.19.d:0 "NKVD가 소련을 겨냥한 내부 음모에 대한 정보를 찾으려 하고 있습니다. NKVD 국장 블라디미르 데카노조프는 라브렌티 베리아의 좋은 친구라고 합니다. 아무도 그들의 계획이 무엇인지 모르지만 그들이 당을 해산시키고 자본주의를 되살리고 싶어한다는 소문이 있습니다."
 sovd.19.a:0 "그는 지도자가 될 수 없어, 그는 콧수염이 없다고!"
 sovd.20.t:0 "예조프가 친구들을 찾다."
-sovd.20.d:0 "The NKVD is trying to find information about internal plots aimed against the Soviet Union. The chief of the NKVD, Vladimir Dekanozov, is a good friend of Nikolai Yezhov. Nobody knows about what their plans are but there are some rumours that they want to dissolve the party and partially restore capitalism."
-sovd.20.a:0 "We expect a rise in demand for tinfoil."
+sovd.20.d:0 "NKVD가 소련을 겨냥한 내부 음모에 대한 정보를 찾으려 하고 있습니다. NKVD 국장 블라디미르 데카노조프는 니콜라이 예조프의 좋은 친구라고 합니다. 아무도 그들의 계획이 무엇인지 모르지만 그들이 당을 해산시키고 자본주의를 되살리고 싶어한다는 소문이 있습니다."
+sovd.20.a:0 "은박지 수요가 증가할 것 같군."
 sovd.21.t:0 "신 레닌주의 세력"
-sovd.21.d:0 "Since the birth of the Soviet Union the VKP(b) hasn't changed its political program. Nikita Khrushev wants to enact minor economic changes and transfer parts of federal power from the centre to the individual Soviet republics. Will he succeed?"
-sovd.21.a:0 "Who knows?"
+sovd.21.d:0 "소련의 건국 이후, VKP는 자신들의 정치 계획을 바꾸지 않았습니다. 니키타 흐루셰프는 경미한 경제 변화를 가져오고 연방 권력의 일부를 중앙에서 각 소비에트 공화국들로 이양시키길 원하고 있습니다, 과연 그가 성공할까요?"
+sovd.21.a:0 "누가 알겠는가?"
 sovd.22.t:0 "신 레닌주의 세력"
-sovd.22.d:0 "Since the birth of the Soviet Union the VKP(b) hasn't changed its political program. Leonid Brezhnev wants to enact minor economic changes and transfer parts of federal power from the centre to the individual Soviet republics. Will he succeed?"
-sovd.22.a:0 "Who knows?"
-sovd.23.t:0 "The faction of True Syndicalism"
-sovd.23.d:0 "Since the birth of the Soviet Republic the VKP(b) hasn't changed its political program. Sergey Kirov and Nikolai Shvernik want to put an end to the world revolution in order to build syndicalism in the Soviet Republic and to bring peace to the tired nation. Will they succeed?"
-sovd.23.a:0 "Who knows?"
+sovd.22.d:0 "소련의 건국 이후, VKP는 자신들의 정치 계획을 바꾸지 않았습니다. 레오니드 브레즈네프는 경미한 경제 변화를 가져오고 연방 권력의 일부를 중앙에서 각 소비에트 공화국들로 이양시키길 원하고 있습니다, 과연 그가 성공할까요?"
+sovd.22.a:0 "누가 알겠는가?"
+sovd.23.t:0 "진조합주의 세력"
+sovd.23.d:0 "소비에트 공화국의 탄생 이후부터 VKP는 자신들의 정치 계획을 바꾸지 않았습니다. 세르게이 키로프와 니콜라이 슈베르닉은 소비에트 공화국에 생디칼리즘을 건설하고, 지친 국가에 평화를 가져오기 위해 세계혁명에 종지부를 찍고 싶어하고 있습니다. 과연 그들이 성공할까요?"
+sovd.23.a:0 "누가 알겠는가?"
 sovd.24.t:0 "세계혁명주의 세력"
 sovd.24.d:0 "투하쳅스키의 죽음 이후 붉은 군대의 여러 장성들 중 콘스탄틴 로코솝스키와 키릴 메레츠코프가 그의 일을 이어가기로 결정했습니다. 세계혁명은 아직 끝나지 않았고 그들은 생디칼리즘을 전 세계에 전파하기 위한 투쟁에서 소비에트 공화국을 이끌고 싶어 합니다."
 sovd.24.a:0 "하지만 소비에트는 지쳤다!"
 sovd.25.t:0 "제 2차 소비에트 선거"
-sovd.25.d:0 "Today the second Soviet general elections has finally begun. Different factions want to assume supreme power over the Soviet state in order to reform the existing political and economic systems in ways they deem appropriate. What will happen at the various congresses? Which faction will gain majority?"
+sovd.25.d:0 "오늘, 제2차 소비에트 총선이 마침내 시작되었습니다. 여러 다른 세력들은 현재의 정치, 경제 체제를 그들이 적절하다고 생각하는 방식대로 개혁하기 위해 소비에트 정권에 대한 절대 우위를 차지하고 싶어합니다. 이 각계각층의 총회에서 무슨 일이 일어날까요? 과연 어느 세력이 과반수를 얻을까요?"
 sovd.25.a:0 "국가 조합주의 세력!"
 sovd.25.b:0 "군부 세력!"
 sovd.25.c:0 "NKVD가 모두를 체포하다!"
 sovd.25.e:0 "신 레닌주의 세력!"
 sovd.25.g:0 "세계 혁명주의 세력!"
-sovd.25.f:0 "The true syndicalist faction!"
-sovd.26.t:0 "블라디미르  레닌의 죽음을 기억하라"
+sovd.25.f:0 "진조합주의 세력!"
+sovd.26.t:0 "블라디미르 레닌의 죽음을 기억하다"
 sovd.26.d:0 "오늘 우리는 세계에서 가장 위대한 사회주의 혁명가 블라디미르 일리치 레닌의 죽음을 기억합니다, 그리고 대의에 대한 그의 공헌은 잊혀지지 않을 것입니다. 추모제는 소비에트 국가 전역에서와 수백만명의 노동자들이 모든 사회주의 국가들의 아버지를 존경하는 다른 사회주의 국가들의 주요 도시들에서 개최되고 있습니다."
 sovd.26.a:0 "레닌은 살아있었다! 레닌은 살아있다! 레닌은 살아있을것이다!"
 sovd.26.b:0 "우리도 그의 죽음에 애도를 표합니다."
-sovd.26.c:0 "빨갱이 놈들, 곧 너희들의 우상과 지옥에서 만날 것이다."
+sovd.26.c:0 "빨갱이 놈들, 너희들은 곧 너희들의 우상과 지옥에서 만날 것이다."
 sovd.27.t:0 "순양함 정비 완료"
 sovd.27.d:0 "구식 순양함들에 대한 전면적 정비가 성공적으로 끝났습니다. 이 배들은 소비에트 해군에 재취역할 준비가 됬습니다."
 sovd.27.a:0 "훌륭해!"
