--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -502,9 +502,9 @@ RUS_CON_IND2:0 "농업 기계화"
 RUS_CON_IND2_desc:0 "A majority of all Russian farms in the nation are still worked on with hands and hooves. This has kept Russian economy stagnated for long enough, a large state-sponsored mechanisation must be initiated!"
 RUS_CON_IND3:0 "여단 조직"
 RUS_CON_IND3_desc:0 "With the much-needed mechanisation initiated we should set up new factories. With less and less farmhands needed on the countryside we should organise temporary construction teams called 'Construction brigades' and put these young, able men to work at our factory lines."
-RUS_CON_POL1:0 "신 헌법"
+RUS_CON_POL1:0 "새로운 헌법"
 RUS_CON_POL1_desc:0 "With the monarch in place we would need a new constitution which clearly outlines the amount of influence the monarch should have in comparison to the senate and the Duma. This is a time of change and many voices wish to be heard."
-RUS_CON_POL2:0 "제국 자유 학회"
+RUS_CON_POL2:0 "제국 자유 학술원"
 RUS_CON_POL2_desc:0 "As our constitution guarantees some rights for our citizens, the state control of the academia has loosened up. This allows scientists, no matter of their political background, to focus solely on their research without having to fear the secret police."
 RUS_CON_POL3:0 "자비로운 차르"
 RUS_CON_POL3_desc:0 "The idea of the Tsar being a feared tyrant is a thing of the past. Our Tsar is beloved and benevolent, like a stern but loving father who looks after us all."
@@ -531,7 +531,7 @@ RUS_DMI_IND1:0 "자유 경제"
 RUS_DMI_IND1_desc:0 "By freeing up the economy from old power structures we can allow new, emerging companies to challenge the old ones. May the best business win!"
 RUS_DMI_IND2:0 "경쟁력 있는 탐구"
 RUS_DMI_IND2_desc:0 "Economies, and businesses, need to be kept competitive in order to grow and expand. We should invest not only in these actual businesses but also the theories behind them. With sufficient science funding, it should benefit not only local companies, but Russia as a whole."
-RUS_DMI_IND3:0 "전쟁준비 "
+RUS_DMI_IND3:0 "전쟁 준비 계획"
 RUS_DMI_IND3_desc:0 "With Russia's economy once again looking strong there's no doubt that our neighbours will look at us with envy hunger. We must make no mistake, a civilian economy in a time of war would end the rising star in a matter of months."
 
 RUS_DMI_POL1:0 "Rationalise the Laws"
