--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -198,27 +198,27 @@ annex.60.a:0 "해방 시켜라!"
 annex.60.b:0 "그냥 점령하는게 낫다..."
 annex.61.t:0 "발트 지역의 운명"
 annex.61.d:0 "The entire Baltic region has been brought under our control. Currently our armed forces are facing some opposition from the local populations. We could leave it up to local governments in the Baltic region to take care of any dissent."
-annex.61.a:0 "Integrate the old Baltic governorates!"
-annex.61.b:0 "Restore the United Baltic Duchy and Lithuania!"
-annex.61.c:0 "Liberate Lithuania and annex the duchy!"
-annex.61.e:0 "Liberate Baltic Confederation!"
-annex.61.g:0 "Liberate Lithuania, Latvia and Estonia!"
-annex.61.f:0 "Liberate Latvia and Estonia!"
-annex.61.h:0 "Continue with military occupation!"
+annex.61.a:0 "구 발트 지도부를 통합하라!"
+annex.61.b:0 "발트 연합 공국과 리투아니아를 복건하라!"
+annex.61.c:0 "리투아니아를 해방시키고 발트 공국을 합병해라!"
+annex.61.e:0 "발트 연합을 해방시켜라!"
+annex.61.g:0 "리투아니아, 라트비아 그리고 에스토니아를 해방시켜라!"
+annex.61.f:0 "라트비이와 에스토니아를 해방시켜라!"
+annex.61.h:0 "군사점령을 계속해라!"
 annex.62.t:0 "남 슬라브 국가들의 운명"
 annex.62.d:0 "Our armed forces have successfully conquered the Entire Western Balkan region, the way things should be. There is some resistance among them, but it will be crushed under our heels!"
-annex.62.a:0 "Liberate Yugoslavia!"
-annex.62.b:0 "Liberate Balkan states!"
+annex.62.a:0 "유고슬라비아를 해방시켜라!"
+annex.62.b:0 "발칸 국가들을 해방시켜라!"
 annex.62.c:0 "Divide western Balkan between Serbia, Croatia and Slovenia!"
-annex.62.e:0 "Continue with military occupation!"
+annex.62.e:0 "군사점령을 계속해라!"
 annex.63.t:0 "뉴 잉글랜드 통합"
-annex.63.d:0 "Rebellious states of New England are now firmly integrated into our motherland."
-annex.63.a:0 "Great!"
+annex.63.d:0 "반동분자스러운 뉴잉글랜드는 이제 완전히 우리조국에 합병됬습니다."
+annex.63.a:0 "좋았어!"
 annex.64.t:0 "센트로 아메리카의 운명"
 annex.64.d:0 "The Centroamérican state has been annexed, our troops are parading in Ciudad de Guatemala. A major threat to the stability in the region has been removed."
 annex.64.a:0 "점령하라"
-annex.64.b:0 "Liberate San Salvador and Guatemala!"
-annex.64.c:0 "Liberate Centroamérica!"
+annex.64.b:0 "산 살바도르와 과테말라를 해방시켜라!"
+annex.64.c:0 "센트로아메리카를 해방시켜라!"
 annex.65.t:0 "The Fate of United Provinces"
 annex.65.d:0 "The United Provinces have been annexed, our troops are parading in Managua. A major threat to the stability in the region has been removed."
 annex.65.a:0 "Continue with military occupation!"
@@ -344,17 +344,17 @@ annex.91.t:0 "Independence of Switzerland"
 annex.91.d:0 "We have granted independence to Switzerland and welcomed them into the Mitteleuropa system. Some politicians argue, however, that we should arrange for their close control under a puppet regime."
 annex.91.a:0 "Grant them complete independence"
 annex.91.b:0 "Establish a puppet regime"
-annex.92.t:0 "Partition of Switzerland"
+annex.92.t:0 "스위스 분할"
 annex.92.d:0 "The German Empire, currently occupying the former country of Switzerland, has proposed a partition of the old Confederation with us. They have offered us the former Italian-speaking cantons of Ticino and Graubunden, centred in the town of Lugano."
-annex.92.a:0 "An excellent proposition!"
-annex.92.b:0 "We don't trust the Germans"
-annex.93.t:0 "Italy accepts"
+annex.92.a:0 "훌륭한 제안이군!"
+annex.92.b:0 "우린 독일인들을 믿지않는다"
+annex.93.t:0 "이탈리아가 수락하였습니다"
 annex.93.d:0 "The Italians have accepted our offer for the partition of Switzerland. We will now transfer sovereignty of the Italian-speaking cantons of Ticino and Graubunden to them."
-annex.93.a:0 "Great"
+annex.93.a:0 "좋았어"
 annex.94.t:0 "Italian Switzerland under our control"
 annex.94.d:0 "The peoples of the Italian-speaking cantons of old Switzerland have finally folded to our control."
 annex.94.a:0 "Great"
-annex.95.t:0 "Italy refuses"
+annex.95.t:0 "이탈리아가 거부하였습니다"
 annex.95.d:0 "To our great surprise the Italians have refused to our generous partition offer, citing various reasons and claims. Military occupation of the region will continue."
 annex.95.a:0 "Their loss..."
 annex.96.d:0 "The German Empire, currently occupying the former country of Switzerland, has proposed a partition of the old Confederation with us. They have offered us the former French-speaking cantons centred in the city of Geneva."
@@ -387,9 +387,9 @@ annex.105.t:0 "Choosing the new Head of State of France"
 annex.105.d:0 "We have the opportunity to install a member of the house of Bourbon-Parma as the new king of France. However, it may be wise to let the Occitans choose their own government."
 annex.105.a:0 "Prince Rene of Bourbon-Parma will be new King!"
 annex.105.b:0 "Let the Occitans decide, as long as they stay loyal."
-annex.106.t:0 "The Annexation of Arabia"
+annex.106.t:0 "아라비아 합병"
 annex.106.d:0 "After a long fight with the Arabians, we have launched a full offensive and forced the Arabian Army to surrender. Riyhad is now in our hands!"
-annex.106.a:0 "Continue with Military Occupation!"
+annex.106.a:0 "군사점령을 계속해라!"
 annex.106.b:0 "Liberate Hashemite Arabia!"
 annex.107.t:0 "The Annexation of Libya"
 annex.107.d:0 "After a long fight with the Libyans, we have launched a full offensive and forced the Libyan Army to surrender. Tripoli is now in our hands!"
@@ -398,25 +398,25 @@ annex.107.b:0 "Liberate Libya!"
 annex.108.t:0 "The Annexation of Egypt"
 annex.108.d:0 "After a long fight with the Egyptians, we have launched a full offensive and forced the Egyptian Army to surrender. Cairo is now in our hands!"
 annex.108.a:0 "Continue with Military Occupation!"
-annex.108.b:0 "Liberate Egypt-Sudan!"
-annex.108.c:0 "Liberate Egypt and Sudan!"
-annex.108.e:0 "Liberate Sudan and occupy Egypt!"
-annex.109.t:0 "The Annexation of Persia"
+annex.108.b:0 "이집트수단왕국을 해방시켜라!"
+annex.108.c:0 "이집트와 수단을 해방시켜라!"
+annex.108.e:0 "수단을 해방하고 이집트를 점령해라!"
+annex.109.t:0 "페르시아 합병"
 annex.109.d:0 "After a long fight with the Persians, we have launched a full offensive and forced the Persian Army to surrender. Tehran is now in our hands!"
-annex.109.a:0 "Continue with Military Occupation!"
-annex.109.b:0 "Liberate Persia!"
+annex.109.a:0 "군사점령을 계속하라!"
+annex.109.b:0 "페르시아를 해방시켜라!"
 annex.110.t:0 "The Annexation of Tunisia"
 annex.110.d:0 "After a long fight with the Tunisians, we have launched a full offensive and forced the Tunisian Army to surrender. Tunis is now in our hands!"
 annex.110.a:0 "Continue with military occupation!"
-annex.110.b:0 "Liberate Tunisia"
-annex.111.t:0 "The Annexation of Yemen"
+annex.110.b:0 "튀니지를 해방시켜라"
+annex.111.t:0 "예멘 합병"
 annex.111.d:0 "After a long fight with the Yemenites, we have launched a full offensive and forced the Yemenite Army to surrender. Sana'a is now in our hands!"
 annex.111.a:0 "Continue with Military Occupation!"
-annex.111.b:0 "Liberate Yemen!"
-annex.112.t:0 "The Annexation of Oman"
+annex.111.b:0 "예멘을 해방시켜라!"
+annex.112.t:0 "오만 합병"
 annex.112.d:0 "After a long fight with the Omani, we have launched a full offensive and forced the Omani Army to surrender. Muscat is now in our hands!"
 annex.112.a:0 "Continue with Military Occupation!"
-annex.112.b:0 "Liberate Oman!"
+annex.112.b:0 "오만을 해방시켜라!"
 annex.113.t:0 "The Annexation of Armenia"
 annex.113.d:0 "After fierce fighting in the Caucasus, we have conquered and annexed Armenia. The Armenian army has surrendered, and the territory is under our control, but the people are still resistant but soon they will submit."
 annex.113.a:0 "Continue with military occupation!"
@@ -447,7 +447,7 @@ annex.118.a:0 "Liberate a friendly Siam!"
 annex.118.b:0 "Maintain military occupation."
 annex.118.c:0 "Install an Chakrabongse Siamese puppet!"
 annex.118.e:0 "Install an Paribatra Siamese puppet!"
-annex.118.f:0 "Make them a republic!"
+annex.118.f:0 "공화국을 설립하라!"
 annex.119.t:0 "실론의 운명"
 annex.119.d:0 "We have managed to drive the Germans from the island of Ceylon and secured the capital of Colombo thoroughly. Now, however, we need to figure out what to do with the damned rock."
 annex.119.a:0 "Liberate a friendly Sri Lanka!"
